# eter

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: apple-silicon.yml  apple-x86.yml  arch-x86.yml  debian-x86.yml  fedora-x86.yml  opensuse-x86.yml  ubuntu-aarch64.yml  ubuntu-x86.yml
docs/: CONTRIBUTING.md  GETTING_STARTED.md  README.md  TODO.md
docs/src/: introduction.md  statements-and-expressions.md
include/eter/Base/: SourceBuffer.h
include/eter/Basic/: Version.h
include/quar/Basic/: Version.h
lib/: CMakeLists.txt
lib/Base/: DiagnosticEngine.cpp  SourceBuffer.cpp
lib/Basic/: CMakeLists.txt  Version.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Lexer/: lit.local.cfg
test/Smoke/: version.smoke
tools/: CMakeLists.txt
tools/eter/: CMakeLists.txt  eter.cpp
tools/quar/: CMakeLists.txt  quar.cpp
unittests/: CMakeLists.txt
unittests/Base/: CMakeLists.txt
unittests/Driver/: CMakeLists.txt
unittests/Lexer/: CMakeLists.txt
